# CLEAR-anonymization

./: .gitignore  README.md  checking_rules.ipynb  datasets.md  notes.md  pyproject.toml  rules.ipynb
.github/workflows/: python-tests.yml
benchmarks/: benchmark.py  benchmark_findok.py  benchmark_findok_step2.py  create_latex_tables.py  create_md_report_rules.py  create_md_reports_llm.py  data.py  feedback.json  findok_utils.py  io.py  pipeline.py  plot_metrics.py  reporting.py  results_findok.rules_report.md  results_findok_qwen35b.rules_report.md  results_findok_refined.rules_report.md  session.py  util.py
clear_anonymization/: __init__.py
clear_anonymization/evaluation/: evaluator.py
clear_anonymization/extractors/: base.py  cache.py  clear_rulechef.py  factory.py  llm.py  ruleextractor.py
clear_anonymization/models/: evaluator.py  nerlearner.py  rulelearner.py
clear_anonymization/ner_datasets/: __init__.py  ler_dataset.py  ner_dataset.py  util.py
clear_anonymization/preprocess/: create_demo_examples.py  create_train_dev_split.py  create_train_test_split.py  m2n_dataset.py  preprocess_data.py  preprocess_ler.py  preprocess_m2n.py  preprocess_with_workers.py  sampling.py  util.py
clear_anonymization/prompts/: examples.json  examples_v2.json  ler_task.txt  m2n_ner_extract_spans.txt  m2n_ner_label_spans.txt  m2n_task.txt  ner_extract_spans.txt  ner_label_spans.txt  ner_task.txt  ner_task_2.txt  ner_task_v2.txt
clear_anonymization/utils/: utils.py
data/: CHANGELOG.md
data_quality/: README.md  collect_patterns.py  collect_rules.py  evaluate_rules.py  list_fp_rules.py  patch_missing_annotations.py  worker.py
data_quality/findok/: CHANGELOG.md
data_quality/findok/existing_annotations/: organisation_annotations.json  (+2 more)
data_quality/patch_missing_annotations/: __main__.py  apply_corrections.py  apply_extend_prev.py  apply_patterns.py  apply_rules.py  changelog.py  extend_correction_pattern.py  span_tagging.py
demo/: ner_llm.ipynb
ner_datasets/: ler_dataset.py
notebooks/: findok.ipynb
notes/: datasets.md
prompts/: ner_task.txt
reports/: 2026-01-05_m2n_eval_results.md  2026-01-07_m2n_eval_results.md  2026-01-13_m2n_eval_results.md  2026-01-14_m2n_eval_results.md  2026-02-19_rule_eval.md  2026-02-21_rule_eval.md  2026-03-02_11-40-20_rule_eval.md  2026-03-02_11-52-09_rule_eval.md  2026-03-02_FinDok_rule_eval.md  create_md_report_rules.py  m2n_eval_results.md  test_eval_results.md
rulechef_data/: manual_rules.json
scripts/: collect_missing_annotations.py  collect_patterns.py  create_md_reports.py  download_dataset.py  evaluate_gliner.py  evaluate_llm.py  evaluate_rules.py  generate_fewshot.py  gliner2_baseline.py  gliner_baseline.py  inspect_rule.py  list_fp_rules.py  llm_baseline.py  patch_missing_annotations.py
tests/: test_evaluator.py
(+294 files in other folders)
