[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "CLEAR-anonymization"
version = "0.1.0"
description = "Comprehensible Learning for Entity Anonymization and Recognition"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "CLEAR-anonymization Contributors"},
]
keywords = ["named entity recognition", "rule-learning", "extraction", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
agentic = [
    "pydantic-ai>=0.0.1",
]
spacy = [
    "spacy>=3.0.0",
]
all = [
    "openai>=1.0.0",
    "pydantic-ai>=0.0.1",
    "spacy>=3.0.0",
]

Homepage = "https://github.com/nadiaverdha/CLEAR-anonymization"
Repository = "https://github.com/nadiaverdha/CLEAR-anonymization"

[project.scripts]
CLEAR-anonymization = "clear-anonymization.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["clear-anonymization"]